@@ -13,6 +13,14 @@
 
 <p><a class="reference external" href="http://docutils.sourceforge.net/">Rest</a> allows <em>inline</em> <strong>style</strong> and other stuff,
 but I guess this <tt class="docutils literal">code</tt> is enough.</p>
+<div class="directive-unknown">
+<strong>unknown: </strong><em>arg1 </em><em>arg2 </em><pre class="literal-block">
+We also support unknown directive, so that no content is lost if reST
+specialization is parsed.
+</pre>
+
+</div>
+<p>Of course we may also find <span class="role-unknown">new roles</span>.</p>
 </div>
 </body>
 </html>
